@@ -3,6 +3,8 @@
 ## Enhancements
 
  * `Test-PathIsJunction` now supports literal paths (i.e. paths with wildcard characters in them, e.g. `[`, `]`, etc.).
+ * `Remove-Junction` now supports removing junctions with wildcards
+ * Added a `LiteralPath` parameter to `Remove-Junction` for deleting junctions whose paths contains wildcard characters (e.g. `[`, `]`, etc.).
 
 ## Bug Fixes
 
